Cleanup of warnings
Signed-off-by: Alexander Schwartz <aschwart@redhat.com>